@@ -5,5 +5,3 @@ hppa.*-.*-.*		libc=6			GLIBC_2.2
 hppa.*-.*-.*		ld=ld.so.1		GLIBC_2.2
 
 hppa-.*-.*		libBrokenLocale=1	GLIBC_2.2
-
-hppa-.*-.*              libgcc_s=4
